--- a/login2/index.html
+++ b/login2/index.html
@@ -25,7 +25,7 @@
             required
           />
           <label for="username" class="label">Username</label>
-          <img src="user.svg" alt="Username Icon" />
+          <img src="user.svg" class="userIcon" alt="Username Icon" />
         </div>
         <div class="text-field">
           <input
@@ -38,7 +38,7 @@
             required
           />
           <label for="password" class="label">Password</label>
-          <img src="eye.svg" class="inputIcon" alt="Password Icon" />
+          <img src="pass.svg" class="passIcon" alt="Password Icon" />
         </div>
         <div class="checkbox">
           <input type="checkbox" id="check" /> Show Password
